--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3.0.2
 
       - name: GitHub dependency vulnerability check
-        if: ${{ github.event_name == 'pull_request_target' }}
+        if: ${{ github.event_name == 'pull_request' }}
         uses: WillDaSilva/dependency-review-action@main
 
       - name: FOSSA dependency license check
